--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "C:\\Users\\Y1\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
+  "python.pythonPath": "E:/python/venv/Scripts/python.exe",
   "python.linting.pylintPath": "pylint",
   "python.linting.pylintArgs": [
     "--load-plugins",
