--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "python.pythonPath": "/study/python/venv/bin/python3",
-  // "python.pythonPath": "E:/python/venv/Scripts/python",
+  // "python.pythonPath": "/study/python/venv/bin/python3",
+  "python.pythonPath": "E:/python/venv/Scripts/python",
   "python.linting.pylintPath": "pylint",
   "python.linting.pylintArgs": [
     "--load-plugins",
